MDEV-7148 - Recurring: InnoDB: Failing assertion: !lock->recursive

On PPC64 high-loaded server may crash due to assertion failure in InnoDB
rwlocks code.

This happened because load order between "recursive" and "writer_thread"
wasn't properly enforced.